plugins {
    id "io.freefair.git-version"
    id "io.freefair.lombok" apply false
    id "io.freefair.javadocs" apply false
    id "io.freefair.github.dependency-submission"
    id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
}

nexusPublishing {
    repositories {
        sonatype {
            stagingProfileId = '7c1c53f8a02656'
        }
    }
}

allprojects {
    repositories {
        mavenCentral()
    }

    group = "de.larsgrefer.sass"

    plugins.withId("java") {

        project.apply plugin: "io.freefair.javadocs"

        java {
            withSourcesJar()
            withJavadocJar()
            toolchain {
                languageVersion = JavaLanguageVersion.of(11)
            }
        }

        tasks.withType(JavaCompile).configureEach {
            options.compilerArgs += "-parameters"
        }

        tasks.withType(Javadoc).configureEach {
            options.addBooleanOption("Xdoclint:-missing", true)
            failOnError = false
        }

        dependencies {
            testImplementation 'org.assertj:assertj-core:3.23.1'

            testImplementation platform("org.junit:junit-bom:5.9.1")
            testImplementation 'org.junit.jupiter:junit-jupiter-api'
            testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
        }

        tasks.withType(Test).configureEach {
            useJUnitPlatform()
            testLogging {
                exceptionFormat "full"
                showExceptions true
                showCauses true
                showStackTraces true
            }
        }

        afterEvaluate {
            tasks.named("jar", Jar) {
                manifest {
                    attributes 'Implementation-Title': "$project.description",
                            'Implementation-Version': "$project.version",
                            'Implementation-URL': "https://github.com/larsgrefer/dart-sass-java"
                }
            }
        }
    }

    plugins.withId("jacoco") {
        tasks.withType(JacocoReport).configureEach {
            reports.xml.required = true
        }
    }

    plugins.withId("maven-publish") {

        project.apply plugin: "io.freefair.maven-central.validate-poms"
        project.apply plugin: "signing"

        signing {
            required { !version.endsWith('SNAPSHOT') && gradle.taskGraph.hasTask("publish") }

            def signingKey = findProperty("signingKey")
            def signingPassword = findProperty("signingPassword")
            useInMemoryPgpKeys(signingKey, signingPassword)
        }

        publishing {
            publications.withType(MavenPublication) {
                pom {
                    url = 'https://github.com/larsgrefer/dart-sass-java/'
                    name = provider { project.description }
                    description = provider { project.description }
                    inceptionYear = '2021'
                    licenses {
                        license {
                            name = 'MIT License'
                            url = 'https://opensource.org/licenses/MIT'
                        }
                    }
                    developers {
                        developer {
                            id = 'larsgrefer'
                            name = 'Lars Grefer'
                            email = 'github@larsgrefer.de'
                            timezone = 'Europe/Berlin'
                        }
                    }
                    ciManagement {
                        system = 'GitHub Actions'
                        url = 'https://github.com/larsgrefer/dart-sass-java/actions'
                    }
                    issueManagement {
                        system = 'GitHub'
                        url = 'https://github.com/larsgrefer/dart-sass-java/issues'
                    }
                    scm {
                        connection = 'scm:git:https://github.com/larsgrefer/dart-sass-java.git'
                        developerConnection = 'scm:git:git@github.com:larsgrefer/dart-sass-java.git'
                        url = 'https://github.com/larsgrefer/dart-sass-java/'
                    }
                }
            }
        }

    }
}

tasks.named('wrapper') {
    distributionType = Wrapper.DistributionType.ALL
}
